--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ $(window).load(function() {
 		<!-- Scripts -->
 		
 		
-<script src="http://labyrinth.dyuthi.in/static/js/jquery.min.js"></script>
+<script src="assets/js/mus.js"></script>
 <script type="text/javascript">
 function flashBody(elem,time){
     $(elem).css('position','fixed');
