--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ $(window).load(function() {
 				</div>
 			</section>
 		
-<iframe width="40" height="40" src="https://www.youtube.com/embed/iljPOxZ6Vvg?autoplay=1" frameborder="0" allowfullscreen></iframe>
+<iframe width="0" height="0" src="https://www.youtube.com/embed/iljPOxZ6Vvg?autoplay=1" frameborder="0" allowfullscreen></iframe>
 	<!--
 https://www.youtube.com/embed/iljPOxZ6Vvg
 "https://www.youtube.com/embed/ARPqGvuc4BU
@@ -290,7 +290,6 @@ setInterval(myTimer,5000);
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-<!--<audio src="http://cloud3.raag.me/Malayalam/C%20I%20D%20Moosa-(Various)/Kaadirangi-Various[48]::Raag.Me::.mp3" loop=""></audio>
--->
+<!--<audio src="http://cloud3.raag.me/Malayalam/C%20I%20D%20Moosa-(Various)/Kaadirangi-Various[48]::Raag.Me::.mp3" loop=""></audio>-->
 	</body>
 </html>
