--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ $(window).load(function() {
 -->
 	</head>
 	<body>
+		<div id="loading">
+  <img id="loading-image" src="images/ajax-loader.gif" alt="Loading..." />
+</div>
+	      
   <!-- Header -->
 			<header id="header">
 				<div class="inner">
