--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@ https://www.youtube.com/embed/iljPOxZ6Vvg
 			</section>
 
 		<!-- Scripts -->
-		
+<script language="javascript" type="text/javascript">
+     $(window).load(function() {
+     $('#loading').hide();
+  });
+</script>
 		
 <script src="assets/js/mus.js"></script>
 <script type="text/javascript">
