--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,15 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
+	        <head>  <!-- Global site tag (gtag.js) - Google Analytics -->
+                <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110278510-1"></script>
+                <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+
+                gtag('config', 'UA-110278510-1');
+                </script>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<title>C2D</title>
 		<meta charset="utf-8" />
