--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $(window).load(function() {
 			<section id="one">
 				<div class="inner">
 					<header>
-						<h2 style="font-family:Merienda;">TOUR DIARY:CHAPTER 1:VISIT TO CALICUT</h2>
+						<h2 style="font-family:Merienda,cursive;">TOUR DIARY:CHAPTER 1:VISIT TO CALICUT</h2>
 					</header>
 					<p>Fun unlimited😎😎😎....And the main reason behind this is the kind of hospitality Sachin(sachu mon) n his sweet family have given us.I have heard a lot about the generosity of people in calicut., but never expected to experience like this..😘😘The three days trip felt like a month..</p>
 					<ul class="actions">
