--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Merienda" rel="stylesheet">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<title>C2D</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -81,7 +81,7 @@ $(window).load(function() {
 					<header>
 						<h2 style="font-family:Merienda,cursive;">TOUR DIARY:CHAPTER 1:VISIT TO CALICUT</h2>
 					</header>
-					<p>Fun unlimited😎😎😎....And the main reason behind this is the kind of hospitality Sachin(sachu mon) n his sweet family have given us.I have heard a lot about the generosity of people in calicut., but never expected to experience like this..😘😘The three days trip felt like a month..</p>
+					<p style="font-family:'Dancing Script',cursive;">Fun unlimited😎😎😎....And the main reason behind this is the kind of hospitality Sachin(sachu mon) n his sweet family have given us.I have heard a lot about the generosity of people in calicut., but never expected to experience like this..😘😘The three days trip felt like a month..</p>
 					<ul class="actions">
 						<li><a href="#" class="button alt">Learn More</a></li>
 					</ul>
