--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ $(window).load(function() {
 					<a href="index.html" class="logo">C2D UNITED</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
-						<a href="elements.html">Elements</a>
+						<a href="generic.html">Blog</a>
+						<a href="elements.html">Photography</a>
 					</nav>
 				</div>
 			</header>
