--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link href="https://fonts.googleapis.com/css?family=Lato|Libre+Barcode+39+Text" rel="stylesheet">
 		<style>
-			.red{
-				font-color:red;
-			}
+			
 		inner
 		<!--
 			{background-image: url("images/banner.jpg");}
@@ -58,7 +56,7 @@ $(window).load(function() {
 				<div class="inner">
 					<a href="index.html" class="logo">C2D UNITED</a>
 					<nav id="nav">
-						<a href="index.html" class="red">Home</a>
+						<a href="index.html" style="font-family:red;">Home</a>
 						<a href="generic.html">Blog</a>
 						<a href="elements.html">Photography</a>
 					</nav>
