--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $(window).load(function() {
 				<div class="inner">
 					<a href="index.html" class="logo">C2D UNITED</a>
 					<nav id="nav">
-						<a href="index.html" style="font-family:red;">Home</a>
+						<a href="index.html" style="font-color:red;">Home</a>
 						<a href="generic.html">Blog</a>
 						<a href="elements.html">Photography</a>
 					</nav>
