--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     });
         </script>
 		<style>
+			#home1:hover{
+				color:red;}
 		.hameid-loader-overlay {
     width: 100%;
     height: 100%;
@@ -56,9 +58,9 @@ $(window).load(function() {
 				<div class="inner">
 					<a href="index.html" class="logo">C2D UNITED</a>
 					<nav id="nav">
-						<a href="index.html" style="font-color:red;">Home</a>
-						<a href="generic.html">Blog</a>
-						<a href="elements.html">Photography</a>
+						<a href="index.html" style="font-color:red;" id="home1">Home</a>
+						<a href="generic.html" id="blog1">Blog</a>
+						<a href="elements.html" id="photo1">Photography</a>
 					</nav>
 				</div>
 			</header>
