--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ $(function () {
         
 		if(i==0)
 		{
-		document.getElementById('banner').style.backgroundImage='url(https://raw.githubusercontent.com/C2Dunited/c2d/master/images/cover.jpg)';
+		document.getElementById('banner').style.backgroundImage='url(https://scontent.fcok1-1.fna.fbcdn.net/v/t31.0-8/22539014_705866419617652_4761242734874086104_o.jpg?_nc_cat=110&oh=dac703e76547f2ccf212f7f6fc33adf2&oe=5C4C911A)';
                 i=1;		
 		}
                 else if(i==1)
