--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     z-index: 99999;
     position: fixed;
 }
+			outer{background: url('images/ajax-loader.gif') center no-repeat #FFF;}
 			inner
 		{background-image: url("images/banner.jpg");}
 			
@@ -51,7 +52,7 @@ $(window).load(function() {
 </script>
 -->
 	</head>
-	<body>
+	<body class="outer">
   <!-- Header -->
 <div id="36" class="hameid-loader-overlay" style="visibility: visible;"></div>
 			<header id="header">
