--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ $(window).load(function() {
 </script>
 -->
 	</head>
-	<body class="outer">
+	<body class="hameid-loader-overlay">
   <!-- Header -->
-<div id="36" class="hameid-loader-overlay" style="visibility: visible;"></div>
+<div id="36"  style="visibility: visible;"></div>
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="logo">C2D UNITED</a>
