--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ $(window).load(function() {
 </script>
 -->
 	</head>
-	<body class="hameid-loader-overlay">
+	<body class="outer">
   <!-- Header -->
-<div id="36"  style="visibility: visible;"></div>
-			<header id="header">
+<div id="36"  class="hameid-loader-overlay" style="visibility: visible;"></div>
+			<header id="header" >
 				<div class="inner">
 					<a href="index.html" class="logo">C2D UNITED</a>
 					<nav id="nav">
