--- a/index3.html
+++ b/index3.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!-- saved from url=(0020)http://c2dunited.ml/ -->
-
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link href="./C2D2_files/css" rel="stylesheet">
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Merienda" rel="stylesheet">
 		<link rel="icon" type="image/x-icon" href="http://c2dunited.ml/favicon.ico">
 		<title>C2D</title>
-		<script src="./C2D2_files/jquery.min.js.download"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.3/howler.min.js">
 </script>
 		<script type="text/javascript"> var sound = new Howl({src: ['https://dl.dropboxusercontent.com/s/zwytzhmnnchlebl/The-Avengers-Theme-Song.mp3?dl=0'],loop: true,autoplay: true}); sound.play(); 
@@ -105,8 +105,8 @@ if(document.readyState === 'ready' || document.readyState === 'complete') {
 
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="./C2D2_files/main.css">
-		<link href="./C2D2_files/css(1)" rel="stylesheet">
+		<link rel="stylesheet" href="assets/css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Lato|Libre+Barcode+39+Text" rel="stylesheet">
 		<style>
 			
 		inner
@@ -115,7 +115,7 @@ if(document.readyState === 'ready' || document.readyState === 'complete') {
 	         -->
 			
 		</style>
-		<script src="./C2D2_files/jquery.min.js(1).download"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <!--
 <script type="text/javascript">
 $(window).load(function() {
@@ -209,10 +209,10 @@ $(window).load(function() {
 setInterval(myTimer,5000);
 </script>	
 
-			<script src="./C2D2_files/jquery.min.js(2).download"></script>
-			<script src="./C2D2_files/skel.min.js.download"></script>
-			<script src="./C2D2_files/util.js.download"></script>
-			<script src="./C2D2_files/main.js.download"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 <script>
 function loader(){
 window.onload=document.getElementById("36").style.visibility = "hidden";
